Update email contact in index.html

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     
     <div style="margin-top: 40px;">
       <p style="font-size: 0.8rem; margin-bottom: 10px;">Precisas de aderência imediata?</p>
-      <a href="mailto:info@resigrip.pt" style="color: var(--gold); text-decoration: none; font-weight: bold;">info@resigrip.pt</a>
+      <a href="mailto:info@resigrip.pt" style="color: var(--gold); text-decoration: none; font-weight: bold;">resigrip.portugal@gmail.com</a>
     </div>
   </div>
 </body>
